Adds new endpoint for posting a article and get a transformed article in return #1088
